# njmtech-somewhere-api

./: .env  .env.example  README.md  cli.py  pyproject.toml  requirements.txt
app/: cli.py  main.py
app/api/: router.py
app/application/: services.py
app/core/: config.py  dependencies.py
app/domain/: models.py  repositories.py
app/infrastructure/repositories/: kiwi_flight_repository.py
docs/: somewhere.md
scripts/: locations_query.sh  locations_radius.sh  search_flights.sh
