[project]
name = "njmtech-somewhere-api"
version = "0.0.1"
description = "This is a simple FastAPI application for a Flight Optimizer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]",
  "uvicorn",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "haversine",
  "typer"
]
